[package]
name = "pulsar-rs-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
toml = "0.5.8"
tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
pulsar = { version = "4.0.0", default-features = false, features = ["tokio-runtime"] }
# specify an exact version for pulsar, to fix compilation error
nom = { version="=7.0.0-alpha1", default-features=false, features=["alloc"] }
uuid = { version = "0.6", features = ["v4", "serde"] }
env_logger = "0.9.0"
log = "0.4.14"
thiserror = "1.0.26"
