[package]
name = "pulsar-rs-reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pulsar = { version = "4", default-features = false, features = ["tokio-runtime", "compression", "auth-oauth2"] }
env_logger = "0.9"
log = "0.4"
thiserror = "1"
